# leaklens

./: .dockerignore  .gitignore  Dockerfile  README.md  SERVER_DEPLOYMENT.md  deploy.sh  docker-compose.production.yml  docker-compose.yml  local-build-deploy.sh  render.yaml  run-on-server-alt.sh  run-on-server-debug.sh  run-on-server.sh
.github/workflows/: ci.yml  docker-publish.yml
api_server/: .env.example  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  swagger.yaml
api_server/proto/: leak_detection_api.proto
api_server/src/: lib.rs  main.rs
api_server/src/api/: check_routes.rs  docs.rs  health.rs  mod.rs  status_routes.rs
api_server/src/crypto/: check_google_api.rs  ecc_cipher.rs  hashing.rs  mod.rs
api_server/src/models/: mod.rs  request_models.rs  response_models.rs
api_server/src/proto/: mod.rs
api_server/src/services/: google_api_client.rs  leak_check_service.rs  mod.rs  token_manager.rs
api_server/src/utils/: config.rs  error.rs  mod.rs  rate_limiter.rs
webapp/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
webapp/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
webapp/app/api-docs/: page.tsx
webapp/app/check-batch/: page.tsx
webapp/app/check-single/: page.tsx
webapp/app/faq/: page.tsx
webapp/app/how-it-works/: page.tsx
webapp/app/privacy-policy/: page.tsx
webapp/components/: api-status.tsx  main-layout.tsx  providers.tsx
webapp/components/ui/: dialog.tsx  dropdown-menu.tsx  select.tsx  sheet.tsx
webapp/hooks/: use-api-queries.ts
webapp/lib/: api.ts
